@@ -337,7 +337,7 @@ LinkTraceProc(
 	    changed = 1;
 	    break;
 	default:
-	    return "internal error: bad linked variable type";
+	    return (char *) "internal error: bad linked variable type";
 	}
 	if (changed) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
@@ -358,7 +358,7 @@ LinkTraceProc(
     if (linkPtr->flags & LINK_READ_ONLY) {
 	Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		TCL_GLOBAL_ONLY);
-	return "linked variable is read-only";
+	return (char *) "linked variable is read-only";
     }
     valueObj = Tcl_ObjGetVar2(interp, linkPtr->varName,NULL, TCL_GLOBAL_ONLY);
     if (valueObj == NULL) {
@@ -366,7 +366,7 @@ LinkTraceProc(
 	 * This shouldn't ever happen.
 	 */
 
-	return "internal error: linked variable couldn't be read";
+	return (char *) "internal error: linked variable couldn't be read";
     }
 
     switch (linkPtr->type) {
@@ -375,7 +375,7 @@ LinkTraceProc(
 		!= TCL_OK) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		    TCL_GLOBAL_ONLY);
-	    return "variable must have integer value";
+	    return (char *) "variable must have integer value";
 	}
 	LinkedVar(int) = linkPtr->lastValue.i;
 	break;
@@ -385,7 +385,7 @@ LinkTraceProc(
 		!= TCL_OK) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		    TCL_GLOBAL_ONLY);
-	    return "variable must have integer value";
+	    return (char *) "variable must have integer value";
 	}
 	LinkedVar(Tcl_WideInt) = linkPtr->lastValue.w;
 	break;
@@ -398,7 +398,7 @@ LinkTraceProc(
 #endif
 		Tcl_ObjSetVar2(interp, linkPtr->varName, NULL,
 			ObjValue(linkPtr), TCL_GLOBAL_ONLY);
-		return "variable must have real value";
+		return (char *) "variable must have real value";
 #ifdef ACCEPT_NAN
 	    }
 	    linkPtr->lastValue.d = valueObj->internalRep.doubleValue;
@@ -412,7 +412,7 @@ LinkTraceProc(
 		!= TCL_OK) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		    TCL_GLOBAL_ONLY);
-	    return "variable must have boolean value";
+	    return (char *) "variable must have boolean value";
 	}
 	LinkedVar(int) = linkPtr->lastValue.i;
 	break;
@@ -422,7 +422,7 @@ LinkTraceProc(
 		|| valueInt < SCHAR_MIN || valueInt > SCHAR_MAX) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		    TCL_GLOBAL_ONLY);
-	    return "variable must have char value";
+	    return (char *) "variable must have char value";
 	}
 	linkPtr->lastValue.c = (char)valueInt;
 	LinkedVar(char) = linkPtr->lastValue.c;
@@ -433,7 +433,7 @@ LinkTraceProc(
 		|| valueInt < 0 || valueInt > UCHAR_MAX) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		    TCL_GLOBAL_ONLY);
-	    return "variable must have unsigned char value";
+	    return (char *) "variable must have unsigned char value";
 	}
 	linkPtr->lastValue.uc = (unsigned char) valueInt;
 	LinkedVar(unsigned char) = linkPtr->lastValue.uc;
@@ -444,7 +444,7 @@ LinkTraceProc(
 		|| valueInt < SHRT_MIN || valueInt > SHRT_MAX) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		    TCL_GLOBAL_ONLY);
-	    return "variable must have short value";
+	    return (char *) "variable must have short value";
 	}
 	linkPtr->lastValue.s = (short)valueInt;
 	LinkedVar(short) = linkPtr->lastValue.s;
@@ -455,7 +455,7 @@ LinkTraceProc(
 		|| valueInt < 0 || valueInt > USHRT_MAX) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		    TCL_GLOBAL_ONLY);
-	    return "variable must have unsigned short value";
+	    return (char *) "variable must have unsigned short value";
 	}
 	linkPtr->lastValue.us = (unsigned short)valueInt;
 	LinkedVar(unsigned short) = linkPtr->lastValue.us;
@@ -466,7 +466,7 @@ LinkTraceProc(
 		|| valueWide < 0 || valueWide > UINT_MAX) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		    TCL_GLOBAL_ONLY);
-	    return "variable must have unsigned int value";
+	    return (char *) "variable must have unsigned int value";
 	}
 	linkPtr->lastValue.ui = (unsigned int)valueWide;
 	LinkedVar(unsigned int) = linkPtr->lastValue.ui;
@@ -477,7 +477,7 @@ LinkTraceProc(
 		|| valueWide < LONG_MIN || valueWide > LONG_MAX) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		    TCL_GLOBAL_ONLY);
-	    return "variable must have long value";
+	    return (char *) "variable must have long value";
 	}
 	linkPtr->lastValue.l = (long)valueWide;
 	LinkedVar(long) = linkPtr->lastValue.l;
@@ -488,7 +488,7 @@ LinkTraceProc(
 		|| valueWide < 0 || (Tcl_WideUInt) valueWide > ULONG_MAX) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		    TCL_GLOBAL_ONLY);
-	    return "variable must have unsigned long value";
+	    return (char *) "variable must have unsigned long value";
 	}
 	linkPtr->lastValue.ul = (unsigned long)valueWide;
 	LinkedVar(unsigned long) = linkPtr->lastValue.ul;
@@ -501,7 +501,7 @@ LinkTraceProc(
 	if (Tcl_GetWideIntFromObj(interp, valueObj, &valueWide) != TCL_OK) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		    TCL_GLOBAL_ONLY);
-	    return "variable must have unsigned wide int value";
+	    return (char *) "variable must have unsigned wide int value";
 	}
 	linkPtr->lastValue.uw = (Tcl_WideUInt)valueWide;
 	LinkedVar(Tcl_WideUInt) = linkPtr->lastValue.uw;
@@ -512,7 +512,7 @@ LinkTraceProc(
 		|| valueDouble < -FLT_MAX || valueDouble > FLT_MAX) {
 	    Tcl_ObjSetVar2(interp, linkPtr->varName, NULL, ObjValue(linkPtr),
 		    TCL_GLOBAL_ONLY);
-	    return "variable must have float value";
+	    return (char *) "variable must have float value";
 	}
 	linkPtr->lastValue.f = (float)valueDouble;
 	LinkedVar(float) = linkPtr->lastValue.f;
@@ -528,7 +528,7 @@ LinkTraceProc(
 	break;
 
     default:
-	return "internal error: bad linked variable type";
+	return (char *) "internal error: bad linked variable type";
     }
     return NULL;
 }
